# prime-numbers

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  bm_Goo.cpp  bm_Prime.cpp
include/: Foo.hpp  Number.hpp  Prime.hpp  PrimeNumbers.hpp
source/: Foo.cpp  Prime.cpp
test/: CMakeLists.txt  Catch.test.cpp  Prime.test.cpp
